--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ Code/Controllers/__pycache__/
 Code/DatabaseAccess/__pycache__/
 Code/Entities/__pycache__/
 Code/Utils/__pycache__/
+Code/assessments.db
 
